--- a/Assets/Content/UI/Buildings/ProductionBuildingUI.uxml
+++ b/Assets/Content/UI/Buildings/ProductionBuildingUI.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" editor-extension-mode="False">
+    <Style src="project://database/Assets/progress-bar-style.uss?fileID=7433441132597879392&amp;guid=94d1fcaa92ea32c45ac52ae3eca472fe&amp;type=3#progress-bar-style"/>
     <ui:VisualElement name="content" style="width: 120px; height: 16px; align-items: center; justify-content: center; align-self: center; align-content: center; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;">
-        <ui:ProgressBar name="production-progress" title="" value="0" style="width: 100%; height: 100%; background-color: rgba(190, 0, 0, 0.6); margin-top: 4px; margin-right: 4px; margin-bottom: 10px; margin-left: 4px;"/>
+        <ui:ProgressBar name="production-progress" style="margin-top: 4px; margin-right: 4px; margin-bottom: 10px; margin-left: 4px; min-width: 160px; max-width: 160px;"/>
     </ui:VisualElement>
 </ui:UXML>
