add: in game menu logic and visual

--- a/Assets/Content/UI/MainUI.uxml
+++ b/Assets/Content/UI/MainUI.uxml
@@ -1,3 +1,4 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="content" style="flex-grow: 1;" />
+    <Style src="project://database/Assets/pause-menu-style.uss?fileID=7433441132597879392&amp;guid=c2f9e313111b5c04f9768c54c6584dcc&amp;type=3#pause-menu-style"/>
+    <ui:VisualElement name="content" style="flex-grow: 1;"/>
 </ui:UXML>
