add: achievement menu page and achievement visual

--- a/Assets/Content/UI/MainUI.uxml
+++ b/Assets/Content/UI/MainUI.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/pause-menu-style.uss?fileID=7433441132597879392&amp;guid=c2f9e313111b5c04f9768c54c6584dcc&amp;type=3#pause-menu-style"/>
+    <Style src="project://database/Assets/Content/UI/Styles/pause-menu-style.uss?fileID=7433441132597879392&amp;guid=c2f9e313111b5c04f9768c54c6584dcc&amp;type=3#pause-menu-style"/>
+    <Style src="project://database/Assets/Content/UI/Styles/slider-custom-style.uss?fileID=7433441132597879392&amp;guid=d8ca339e57bb8704db73d79b8b29f06a&amp;type=3#slider-custom-style"/>
     <ui:VisualElement name="content" style="flex-grow: 1;"/>
 </ui:UXML>
