--- a/Assets/Content/UI/Styles/pause-menu-style.uss
+++ b/Assets/Content/UI/Styles/pause-menu-style.uss
@@ -1,141 +1,26 @@
-.resume-button {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(0, 80, 109);
-    border-right-color: rgb(0, 80, 109);
-    border-top-color: rgb(0, 80, 109);
-    border-bottom-color: rgb(0, 80, 109);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(0, 108, 161);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
-.resume-button:hover {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 30px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(0, 80, 109);
-    border-right-color: rgb(0, 80, 109);
-    border-top-color: rgb(0, 80, 109);
-    border-bottom-color: rgb(0, 80, 109);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(0, 172, 255);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
-.resume-button:active {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(0, 80, 109);
-    border-right-color: rgb(0, 80, 109);
-    border-top-color: rgb(0, 80, 109);
-    border-bottom-color: rgb(0, 80, 109);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(0, 172, 255);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
 .menu-button {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
+    min-height: 80px;
+    max-height: 80px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Bold.ttf?fileID=12800000&guid=739e3c8cb2824ed43b983e0f7077a4a1&type=3#Onest-Bold");
+    font-size: 24px;
     min-width: 400px;
     max-width: 400px;
     -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
     color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 79, 0);
-    border-right-color: rgb(109, 79, 0);
-    border-top-color: rgb(109, 79, 0);
-    border-bottom-color: rgb(109, 79, 0);
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+    border-left-color: rgb(132, 132, 135);
+    border-right-color: rgb(132, 132, 135);
+    border-top-color: rgb(132, 132, 135);
+    border-bottom-color: rgb(132, 132, 135);
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
@@ -146,196 +31,79 @@
     transition-delay: 0s;
     -unity-background-scale-mode: scale-and-crop;
     background-position-x: center;
-    -unity-background-image-tint-color: rgb(174, 136, 0);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
+    background-image: none;
+    background-color: rgb(55, 55, 63);
 }
 
 .menu-button:hover {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 30px;
+    min-height: 80px;
+    max-height: 80px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Bold.ttf?fileID=12800000&guid=739e3c8cb2824ed43b983e0f7077a4a1&type=3#Onest-Bold");
+    font-size: 26px;
     min-width: 400px;
     max-width: 400px;
     -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 79, 0);
-    border-right-color: rgb(109, 79, 0);
-    border-top-color: rgb(109, 79, 0);
-    border-bottom-color: rgb(109, 79, 0);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
     transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out-sine;
     transition-property: all;
     transition-delay: 0s;
     -unity-background-scale-mode: scale-and-crop;
     background-position-x: center;
-    -unity-background-image-tint-color: rgb(255, 200, 0);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
+    background-image: none;
 }
 
 .menu-button:active {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
+    min-height: 80px;
+    max-height: 80px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Bold.ttf?fileID=12800000&guid=739e3c8cb2824ed43b983e0f7077a4a1&type=3#Onest-Bold");
+    font-size: 24px;
     min-width: 400px;
     max-width: 400px;
     -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 79, 0);
-    border-right-color: rgb(109, 79, 0);
-    border-top-color: rgb(109, 79, 0);
-    border-bottom-color: rgb(109, 79, 0);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
     transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out-sine;
     transition-property: all;
     transition-delay: 0s;
     -unity-background-scale-mode: scale-and-crop;
     background-position-x: center;
-    -unity-background-image-tint-color: rgb(255, 200, 0);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
-.exit-button {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 0, 0);
-    border-right-color: rgb(109, 0, 0);
-    border-top-color: rgb(109, 0, 0);
-    border-bottom-color: rgb(109, 0, 0);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(170, 0, 42);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
-.exit-button:hover {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 30px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 0, 0);
-    border-right-color: rgb(109, 0, 0);
-    border-top-color: rgb(109, 0, 0);
-    border-bottom-color: rgb(109, 0, 0);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(255, 0, 62);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
-}
-
-.exit-button:active {
-    min-height: 60px;
-    max-height: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    -unity-font-definition: url("project://database/Assets/Content/Fonts/Onest-Medium.ttf?fileID=12800000&guid=fa73f5a94ced6614fa22a07e7d60523b&type=3#Onest-Medium");
-    font-size: 28px;
-    min-width: 400px;
-    max-width: 400px;
-    -unity-font-style: normal;
-    background-color: rgba(39, 39, 39, 0);
-    color: rgb(255, 255, 255);
-    border-top-width: 3px;
-    border-right-width: 3px;
-    border-bottom-width: 3px;
-    border-left-width: 3px;
-    border-left-color: rgb(109, 0, 0);
-    border-right-color: rgb(109, 0, 0);
-    border-top-color: rgb(109, 0, 0);
-    border-bottom-color: rgb(109, 0, 0);
-    margin-top: 0;
-    margin-bottom: 15px;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transition-delay: 0s;
-    -unity-background-scale-mode: scale-and-crop;
-    background-position-x: center;
-    -unity-background-image-tint-color: rgb(255, 0, 62);
-    background-image: url("project://database/Assets/Content/UI/button-background.png?fileID=2800000&guid=07a8aa76ca50fae4f8418b5a1e8163fb&type=3#button-background");
 }
